--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "author": "Douglas Rubim <douglasrubims@gmail.com>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "format": "prettier '**/*.ts' --write",
+    "test": "jest src/tests --runInBand",
+    "testSpec": "jest"
+  },
   "devDependencies": {
     "@swc/core": "^1.3.39",
     "@swc/wasm": "^1.3.39",
@@ -15,5 +20,8 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "kafkajs": "^2.2.4"
   }
 }
