--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "build": "tsc",
     "format": "prettier '**/*.ts' --write",
     "test": "jest src/tests --runInBand",
     "testSpec": "jest"
@@ -15,11 +16,15 @@
   "devDependencies": {
     "@swc/core": "^1.3.39",
     "@swc/wasm": "^1.3.39",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.0",
+    "@types/uuid": "^9.0.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "kafkajs": "^2.2.4"
+    "express": "^4.18.2",
+    "kafkajs": "^2.2.4",
+    "uuid": "^9.0.0"
   }
 }
