--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bridge",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Bridge is a communication interface between microservices with kafkajs and express.js.",
   "main": "build/index.js",
   "repository": "https://github.com/douglasrubims/Bridge.git",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/uuid": "^9.0.1",
     "kafkajs": "^2.2.4",
+    "kafkajs-lz4": "^2.0.0-beta.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
