--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "scripts": {
     "postinstall": "npm run build",
     "build": "tsc",
-    "format": "prettier '**/*.ts' --write",
-    "test": "jest src/tests --runInBand",
-    "testSpec": "jest"
+    "format": "npx @biomejs/biome format src --write"
   },
   "dependencies": {
     "@types/uuid": "^9.0.1",
@@ -21,10 +19,10 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.5.2",
     "@swc/core": "^1.3.46",
     "@swc/wasm": "^1.3.46",
     "@types/node": "^18.15.11",
-    "prettier": "^2.8.7",
     "typescript": "^5.0.3"
   }
 }
