--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "bridge",
-	"version": "0.2.9",
+	"version": "0.3.0",
 	"description": "Bridge is a communication interface between microservices with kafkajs and express.js.",
 	"main": "build/index.js",
 	"repository": "https://github.com/douglasrubims/Bridge.git",
@@ -15,11 +15,12 @@
 	},
 	"dependencies": {
 		"@types/uuid": "^9.0.1",
+		"ioredis": "^5.4.1",
 		"kafkajs": "^2.2.4",
 		"uuid": "^9.0.1"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.5.2",
+		"@biomejs/biome": "^1.7.0",
 		"@swc/core": "^1.3.46",
 		"@swc/wasm": "^1.3.46",
 		"@types/node": "^18.15.11",
