--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 	"dependencies": {
 		"@types/uuid": "^9.0.1",
 		"axios": "^1.6.8",
+		"express": "^4.19.2",
 		"ioredis": "^5.4.1",
+		"jsonwebtoken": "^9.0.2",
 		"kafkajs": "^2.2.4",
 		"uuid": "^9.0.1"
 	},
@@ -24,6 +26,8 @@
 		"@biomejs/biome": "^1.7.1",
 		"@swc/core": "^1.3.46",
 		"@swc/wasm": "^1.3.46",
+		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/node": "^18.15.11",
 		"typescript": "^5.0.3"
 	}
