--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,21 @@
 {
-  "compilerOptions": {
-    "target": "es2022",
-    "module": "commonjs",
-    "lib": ["es2022"],
-    "allowJs": true,
-    "outDir": "build",
-    "rootDir": "src",
-    "strict": true,
-    "noImplicitAny": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true
-  },
-  "typeRoots": ["src/@types/index.d.ts"],
-  "exclude": ["node_modules", "build"],
-  "ts-node": {
-    "swc": true,
-    "transpileOnly": true
-  }
+	"compilerOptions": {
+		"target": "es2022",
+		"module": "commonjs",
+		"lib": ["es2022"],
+		"allowJs": true,
+		"outDir": "build",
+		"rootDir": "src",
+		"strict": true,
+		"noImplicitAny": true,
+		"esModuleInterop": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true
+	},
+	"typeRoots": ["src/@types/index.d.ts"],
+	"exclude": ["node_modules", "build"],
+	"ts-node": {
+		"swc": true,
+		"transpileOnly": true
+	}
 }
