--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 		"strict": true,
 		"noImplicitAny": true,
 		"esModuleInterop": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"skipLibCheck": true
 	},
 	"typeRoots": ["src/@types/index.d.ts"],
 	"exclude": ["node_modules", "build"],
